c4prj3_finish/grade.txt
Grading at Sun Jul 21 15:10:13 UTC 2019
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
deck.c: In function ‘assert_full_deck’:
deck.c:46:29: error: request for member ‘value’ in something not a structure or union
       if(c.value==**(card+j).value && c.suit == **(card+j).suit) cnt++;
                             ^
deck.c:46:59: error: request for member ‘suit’ in something not a structure or union
       if(c.value==**(card+j).value && c.suit == **(card+j).suit) cnt++;
                                                           ^
<builtin>: recipe for target 'deck.o' failed
make: *** [deck.o] Error 1
make failed

Overall Grade: F
